alignment and review fixes

--- a/public/css/front/app.css
+++ b/public/css/front/app.css
@@ -16012,8 +16012,13 @@ body .chat-feedback-message.white-msg:before {
   top: 9px;
 }
 
+.service-provider a.btn i.icon-message {
+  font-size: 20px;
+}
+
 .service-provider a.btn-cancel-job i.icon-folder {
   top: 9px;
+  font-size: 21px;
 }
 
 .fancy-box-mask {
