--- a/resources/assets/sass/front/styles/custom.scss
+++ b/resources/assets/sass/front/styles/custom.scss
@@ -2286,11 +2286,15 @@ body{
                     font-size: 21px;
                     top: 9px;
                 }
+                &.icon-message{
+                    font-size: 20px;
+                }
             }            
         }
         &.btn-cancel-job{
             i.icon-folder{
                 top: 9px;
+                font-size: 21px;
             }
         }
     }
